--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -46,5 +46,5 @@ jobs:
       - name: Publish on GitHub
         uses: actions/upload-artifact@v2
         with:
-          name: sporran-extension
+          name: sporran-extension-${{ github.sha }}
           path: dist/web-ext-artifacts/*
