--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -44,4 +44,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: sporran-extension-${{ github.sha }}
-          path: dist/web-ext-artifacts/*
+          path: dist/web-ext-artifacts/sporran-1.0.0.zip
