--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@storybook/addons": "^6.1.21",
     "@storybook/react": "^6.1.21",
     "@teamsupercell/typings-for-css-modules-loader": "^2.4.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/chrome": "^0.0.133",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
@@ -73,7 +75,6 @@
     "prettier": "^2.2.1",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
-    "react-test-renderer": "^17.0.1",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.2",
     "ts-loader": "^8.0.17",
