--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "package": "cd dist && web-ext build --overwrite-dest",
-    "dev": "webpack -w --config webpack.dev.js",
+    "dev": "webpack --watch --config webpack.dev.js",
     "test": "jest",
-    "lint": "eslint --fix -c ./.eslintrc.json \"src/**/*.ts*\"",
+    "lint": "eslint --fix --max-warnings 0 --config ./.eslintrc.json \"src/**/*.ts*\"",
     "prettify": "prettier --write \"src/**/*.ts*\"",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook --port 6006",
     "open-firefox": "web-ext run --source-dir dist",
     "open-chrome": "node scripts/chrome-launch.js"
   },
@@ -69,8 +69,10 @@
     "css-loader": "^5.1.1",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.2.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "jest-css-modules": "^2.1.0",
     "prettier": "^2.2.1",
