--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bn.js": "^5.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-spinners": "^0.10.6",
     "webextension-polyfill-ts": "^0.25.0"
   },
@@ -58,6 +59,7 @@
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-router-dom": "^5.1.7",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
