--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -26,5 +26,5 @@
     "http://*/",
     "https://*/"
   ],
-  "content_security_policy": "script-src 'self' 'wasm-eval';"
+  "content_security_policy": "script-src 'self' 'wasm-eval'; object-src 'self';"
 }
