--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.4.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
     "@types/chrome": "^0.0.133",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.20",
