--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@storybook/addons": "^6.1.21",
     "@storybook/react": "^6.1.21",
     "@teamsupercell/typings-for-css-modules-loader": "^2.4.0",
+    "@testing-library/dom": "^7.30.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
