--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -11,7 +11,7 @@
   },
   "background": {
     "scripts": ["js/backgroundPage.js"],
-    "persistent": false
+    "persistent": true
   },
   "icons": {
     "16": "icon-16.png",
