--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "classnames": "^2.2.6",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
+    "react-accessible-dropdown-menu-hook": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-spinners": "^0.10.6",
