--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@kiltprotocol/core": "^0.20.0",
     "bn.js": "^5.2.0",
     "classnames": "^2.2.6",
+    "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -61,6 +62,7 @@
     "@types/chrome": "^0.0.133",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.21",
+    "@types/lodash-es": "^4.17.4",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
