--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
     "typescript-plugin-css-modules": "^3.2.0",
+    "url-loader": "^4.1.1",
     "web-ext": "^6.0.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^4.6.0",
