--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
   },
   "dependencies": {
     "@kiltprotocol/core": "^0.20.0",
+    "@popperjs/core": "^2.9.1",
     "bn.js": "^5.2.0",
     "classnames": "^2.2.6",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-accessible-dropdown-menu-hook": "^2.2.0",
     "react-dom": "^17.0.2",
+    "react-popper": "^2.2.5",
     "react-router-dom": "^5.2.0",
     "react-spinners": "^0.10.6",
     "swr": "^0.5.4",
@@ -92,6 +94,7 @@
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
     "typescript-plugin-css-modules": "^3.2.0",
+    "url-loader": "^4.1.1",
     "web-ext": "^6.0.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^4.6.0",
