--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-accessible-dropdown-menu-hook": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
+    "react-qr-svg": "^2.3.0",
     "react-router-dom": "^5.2.0",
     "react-spinners": "^0.10.6",
     "swr": "^0.5.4",
