--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "rootDir": "./src",
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
     "outDir": "dist/js",
     "strict": true,
     "sourceMap": true,
