--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-accessible-dropdown-menu-hook": "^2.2.0",
+    "react-dialog-polyfill": "^1.0.3",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
     "react-qr-svg": "^2.3.0",
