SK-42: Send coin screen

--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -21,6 +21,8 @@
   "permissions": [
     "tabs",
     "activeTab",
+    "clipboardRead",
+    "clipboardWrite",
     "notifications",
     "storage",
     "http://*/",
