--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "chrome-extension-i18n-shim": "^1.0.0",
     "chrome-launch": "^1.1.4",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^5.2.4",
