--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "package": "cd dist && web-ext build --overwrite-dest",
     "dev": "webpack --watch --config webpack.dev.js",
     "test": "jest",
-    "lint": "eslint --fix --max-warnings 0 --config ./.eslintrc.json \"src/**/*.ts*\"",
+    "lint": "yarn run lint-css && yarn run lint-js",
+    "lint-js": "eslint --max-warnings 0 --config ./.eslintrc.json \"src/**/*.ts*\"",
+    "lint-css": "stylelint \"src/**/*.css*\"",
     "prettify": "prettier --write \"src/**/*.ts*\"",
     "storybook": "start-storybook --port 6006",
     "open-firefox": "web-ext run --source-dir dist",
@@ -90,6 +92,9 @@
     "react-docgen-typescript-loader": "^3.7.2",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "style-loader": "^2.0.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-css-modules": "^2.2.0",
+    "stylelint-config-standard": "^22.0.0",
     "ts-jest": "^26.5.5",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
