--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -10,7 +10,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "scripts": ["js/backgroundPage.js"],
+    "scripts": ["js/backgroundScript.js"],
     "persistent": true
   },
   "content_scripts": [{
