speed up jest tests by less parallelization

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -32,7 +32,16 @@ jobs:
         run: yarn lint
 
       - name: Run tests
+        run: yarn test --maxWorkers=1
+
+      - name: Run tests
         run: yarn test
+
+      - name: Run tests
+        run: yarn test --maxWorkers=2
+
+      - name: Run tests
+        run: yarn test --maxWorkers=1
 
       - name: Build code
         run: yarn build
