--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@storybook/addon-links": "^6.3.4",
     "@storybook/addon-toolbars": "^6.3.4",
     "@storybook/addon-viewport": "^6.3.4",
+    "@storybook/builder-webpack5": "^6.3.4",
+    "@storybook/manager-webpack5": "^6.3.4",
     "@storybook/react": "^6.3.4",
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/dom": "^8.1.0",
@@ -83,10 +85,12 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
+    "buffer": "^6.0.3",
     "chrome-extension-i18n-shim": "^1.0.0",
     "chrome-launch": "^1.1.4",
-    "copy-webpack-plugin": "^6.4.1",
-    "css-loader": "^5.2.7",
+    "copy-webpack-plugin": "^9.0.0",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.1.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^24.3.6",
@@ -96,17 +100,18 @@
     "jest": "^27.0.6",
     "jest-css-modules": "^2.1.0",
     "prettier": "^2.3.2",
-    "style-loader": "^2.0.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "style-loader": "^3.1.0",
     "stylelint": "^13.13.1",
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-standard": "^22.0.0",
     "ts-jest": "^27.0.3",
-    "ts-loader": "^8.3.0",
+    "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "typescript-plugin-css-modules": "^3.4.0",
-    "url-loader": "^4.1.1",
     "web-ext": "^6.2.0",
-    "webpack": "^4.41.6",
+    "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-extension-reloader": "^1.1.4",
     "webpack-merge": "^5.8.0"
