--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -6,7 +6,12 @@
   "version": "1.0.0",
   "default_locale": "en",
   "browser_action": {
-    "default_icon": "icon/light/16.png",
+    "default_icon": {
+      "16": "icon/light/16.png",
+      "32" : "icon/light/32.png",
+      "48": "icon/light/48.png",
+      "128": "icon/light/128.png"
+    },
     "default_popup": "popup.html"
   },
   "background": {
@@ -19,6 +24,7 @@
   }],
   "icons": {
     "16": "icon/light/16.png",
+    "32": "icon/light/32.png",
     "48": "icon/light/48.png",
     "128": "icon/light/128.png"
   },
