SK-273: Developer version of Extension

--- a/.github/workflows/stores.yaml
+++ b/.github/workflows/stores.yaml
@@ -1,13 +1,10 @@
-name: Packages the internal version
-on:
-  push:
-    branches:
-      - main
+name: Packages the public version
+on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      VARIANT: internal
+      VARIANT: public
     steps:
       - name: Configure Node and package manager
         uses: actions/setup-node@v2.1.5
@@ -33,9 +30,6 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Run linter
-        run: yarn lint
-
       - name: Run tests
         run: yarn test
 
@@ -49,4 +43,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: sporran-extension-${{ github.sha }}
-          path: dist/web-ext-artifacts/sporran-internal.zip
+          path: dist/web-ext-artifacts/sporran-public.zip
