--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -49,4 +49,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: sporran-extension-${{ github.sha }}
-          path: dist/web-ext-artifacts/sporran-internal.zip
+          path: dist/web-ext-artifacts/sporran-1.0.0.zip
