--- a/.github/workflows/stores.yaml
+++ b/.github/workflows/stores.yaml
@@ -40,4 +40,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: sporran-extension-${{ github.sha }}
-          path: dist/web-ext-artifacts/sporran-public.zip
+          path: dist/web-ext-artifacts/sporran-1.0.0.zip
