yarn dev builds internal variant

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "package": "cd dist && web-ext build --overwrite-dest",
-    "dev": "webpack --watch --config webpack.dev.js",
+    "dev": "env VARIANT=internal webpack --watch --config webpack.dev.js",
     "test": "jest",
     "lint": "yarn run lint-css && yarn run lint-js",
     "lint-js": "eslint --max-warnings 0 --config ./.eslintrc.json \"src/**/*.ts*\"",
