--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@kiltprotocol/core": "^0.21.0",
     "@polkadot/extension-inject": "^0.38.5",
+    "@polkadot/ui-shared": "^0.81.1",
     "bn.js": "^5.2.0",
     "classnames": "^2.3.1",
     "lodash-es": "^4.17.21",
