only configure babel for the test env

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,10 @@
 {
-  "presets": [
-    ["@babel/preset-env", { "targets": { "node": "current" } }],
-    "@babel/preset-typescript"
-  ]
+  "env": {
+    "test": {
+      "presets": [
+        ["@babel/preset-env", { "targets": { "node": "current" } }],
+        "@babel/preset-typescript"
+      ]
+    }
+  }
 }
