--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.0",
     "@types/lodash-es": "^4.17.4",
