some webpack configuration improvements

--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "node": ">= 14"
   },
   "scripts": {
-    "build": "webpack --config webpack.prod.js",
+    "build": "env NODE_ENV=production webpack",
     "package": "cd dist && web-ext build --overwrite-dest",
-    "dev": "env VARIANT=internal webpack --watch --config webpack.dev.js",
-    "dev-public": "env VARIANT=public webpack --watch --config webpack.dev.js",
+    "dev": "env VARIANT=internal NODE_ENV=development webpack --watch",
+    "dev-public": "env VARIANT=public NODE_ENV=development webpack --watch",
     "test": "jest",
     "lint": "yarn run lint-css && yarn run lint-js",
     "lint-js": "eslint --max-warnings 0 --config ./.eslintrc.json \"src/**/*.ts*\"",
