--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -33,7 +33,7 @@
     "clipboardWrite",
     "storage"
   ],
-  "content_security_policy": "script-src 'self' 'wasm-eval'; object-src 'self';",
+  "content_security_policy": "script-src 'self' 'wasm-eval' 'unsafe-eval'; object-src 'self';",
   "web_accessible_resources": [
     "js/injectedScript.js"
   ]
