--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "open-chrome": "node scripts/chrome-launch.js"
   },
   "dependencies": {
-    "@kiltprotocol/core": "0.24.0-3",
-    "@kiltprotocol/messaging": "0.24.0-3",
+    "@kiltprotocol/core": "^0.24.0-5",
+    "@kiltprotocol/messaging": "^0.24.0-5",
     "@polkadot/extension-inject": "^0.40.3",
     "@polkadot/ui-shared": "^0.86.1",
     "bn.js": "^4.12.0",
