--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
+    "@parcel/config-webextension": "2.8.3",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-controls": "^6.5.16",
@@ -101,7 +102,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
-    "buffer": "^6.0.3",
+    "buffer": "^5.0.0",
     "bundlewatch": "^0.3.3",
     "chrome-extension-i18n-shim": "^1.0.0",
     "chrome-launch": "^1.1.4",
@@ -120,6 +121,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.5",
+    "parcel": "2.8.3",
     "prettier": "^2.8.5",
     "process": "^0.11.10",
     "react-router": "^5.3.4",
@@ -138,5 +140,17 @@
     "webpack-cli": "^5.0.1",
     "webpack-extension-reloader": "^1.1.4",
     "webpack-merge": "^5.8.0"
+  },
+  "targets": {
+    "default": {
+      "source": [
+        "src/static/manifest.json"
+      ],
+      "context": "browser",
+      "engines": {
+        "browsers": "last 2 Chrome versions, last 2 Firefox versions"
+      },
+      "outputFormat": "esmodule"
+    }
   }
 }
