--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.3.1",
     "jest-css-modules": "^2.1.0",
+    "mini-css-extract-plugin": "^2.4.3",
     "prettier": "^2.4.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
