--- a/package.json
+++ b/package.json
@@ -40,10 +40,18 @@
     "open-chrome": "node scripts/chrome-launch.js"
   },
   "dependencies": {
+    "@kiltprotocol/chain-helpers": "0.24.0-5",
     "@kiltprotocol/core": "^0.24.0-5",
+    "@kiltprotocol/did": "0.24.0-5",
     "@kiltprotocol/messaging": "^0.24.0-5",
+    "@kiltprotocol/types": "0.24.0-5",
+    "@kiltprotocol/utils": "0.24.0-5",
     "@polkadot/extension-inject": "^0.40.3",
+    "@polkadot/keyring": "^7.3.1",
+    "@polkadot/types": "^5.9.1",
     "@polkadot/ui-shared": "^0.86.2",
+    "@polkadot/util": "^7.3.1",
+    "@polkadot/util-crypto": "^7.3.1",
     "bn.js": "^4.12.0",
     "classnames": "^2.3.1",
     "ky": "^0.28.6",
@@ -67,6 +75,7 @@
     "@storybook/addon-links": "^6.3.12",
     "@storybook/addon-toolbars": "^6.3.12",
     "@storybook/addon-viewport": "^6.3.12",
+    "@storybook/addons": "^6.3.12",
     "@storybook/builder-webpack5": "^6.3.12",
     "@storybook/manager-webpack5": "^6.3.12",
     "@storybook/react": "^6.3.12",
@@ -92,8 +101,10 @@
     "copy-webpack-plugin": "^9.0.0",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.4.0",
+    "dialog-polyfill": "^0.5.6",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
