--- a/package.json
+++ b/package.json
@@ -40,18 +40,18 @@
     "open-chrome": "node scripts/chrome-launch.js"
   },
   "dependencies": {
-    "@kiltprotocol/chain-helpers": "0.24.0-5",
-    "@kiltprotocol/core": "^0.24.0-5",
-    "@kiltprotocol/did": "0.24.0-5",
-    "@kiltprotocol/messaging": "^0.24.0-5",
-    "@kiltprotocol/types": "0.24.0-5",
-    "@kiltprotocol/utils": "0.24.0-5",
+    "@kiltprotocol/chain-helpers": "^0.24.0-7",
+    "@kiltprotocol/core": "^0.24.0-7",
+    "@kiltprotocol/did": "^0.24.0-7",
+    "@kiltprotocol/messaging": "^0.24.0-7",
+    "@kiltprotocol/types": "^0.24.0-7",
+    "@kiltprotocol/utils": "^0.24.0-7",
     "@polkadot/extension-inject": "^0.40.4",
-    "@polkadot/keyring": "^7.3.1",
-    "@polkadot/types": "^5.9.1",
+    "@polkadot/keyring": "7.5.1",
+    "@polkadot/types": "6.4.2",
     "@polkadot/ui-shared": "^0.86.2",
-    "@polkadot/util": "^7.3.1",
-    "@polkadot/util-crypto": "^7.3.1",
+    "@polkadot/util": "7.5.1",
+    "@polkadot/util-crypto": "7.5.1",
     "bn.js": "^4.12.0",
     "classnames": "^2.3.1",
     "ky": "^0.28.6",
