--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "open-chrome": "node scripts/chrome-launch.js"
   },
   "dependencies": {
-    "@kiltprotocol/core": "0.24.0-1",
-    "@kiltprotocol/messaging": "0.24.0-1",
+    "@kiltprotocol/core": "^0.24.0-7",
+    "@kiltprotocol/messaging": "^0.24.0-7",
     "@polkadot/extension-inject": "^0.39.3",
     "@polkadot/ui-shared": "^0.85.3",
     "bn.js": "^4.12.0",
