--- a/package.json
+++ b/package.json
@@ -40,81 +40,91 @@
     "open-chrome": "node scripts/chrome-launch.js"
   },
   "dependencies": {
-    "@kiltprotocol/core": "0.24.0-1",
-    "@kiltprotocol/messaging": "0.24.0-1",
-    "@polkadot/extension-inject": "^0.39.3",
-    "@polkadot/ui-shared": "^0.85.3",
+    "@kiltprotocol/core": "^0.24.0-7",
+    "@kiltprotocol/messaging": "^0.24.0-7",
+    "@polkadot/extension-inject": "^0.40.4",
+    "@polkadot/ui-shared": "^0.86.2",
     "bn.js": "^4.12.0",
     "classnames": "^2.3.1",
     "lodash-es": "^4.17.21",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
-    "react-accessible-dropdown-menu-hook": "^3.0.0",
+    "react-accessible-dropdown-menu-hook": "^3.1.0",
     "react-dialog-polyfill": "^1.0.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-spinners": "^0.10.6",
+    "react-spinners": "^0.11.0",
     "swr": "^1.0.1",
     "webextension-polyfill-ts": "^0.26.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
-    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-console": "^1.2.3",
-    "@storybook/addon-controls": "^6.3.8",
-    "@storybook/addon-links": "^6.3.8",
-    "@storybook/addon-toolbars": "^6.3.8",
-    "@storybook/addon-viewport": "^6.3.8",
-    "@storybook/builder-webpack5": "^6.3.8",
-    "@storybook/manager-webpack5": "^6.3.8",
-    "@storybook/react": "^6.3.8",
+    "@storybook/addon-controls": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-toolbars": "^6.3.12",
+    "@storybook/addon-viewport": "^6.3.12",
+    "@storybook/builder-webpack5": "^6.3.12",
+    "@storybook/manager-webpack5": "^6.3.12",
+    "@storybook/react": "^6.3.12",
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
-    "@testing-library/dom": "^8.5.0",
+    "@testing-library/dom": "^8.10.1",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.0",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.2",
     "@types/lodash-es": "^4.17.5",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^27.2.0",
-    "babel-loader": "^8.2.2",
+    "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.3",
     "buffer": "^6.0.3",
     "chrome-extension-i18n-shim": "^1.0.0",
     "chrome-launch": "^1.1.4",
     "copy-webpack-plugin": "^9.0.0",
     "crypto-browserify": "^3.12.0",
-    "css-loader": "^6.2.0",
-    "eslint": "^7.32.0",
+    "css-loader": "^6.5.0",
+    "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.2.0",
+    "jest": "^27.3.1",
     "jest-css-modules": "^2.1.0",
-    "prettier": "^2.4.0",
+    "prettier": "^2.4.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
-    "style-loader": "^3.2.1",
+    "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
-    "stylelint-config-css-modules": "^2.2.0",
+    "stylelint-config-css-modules": "^2.3.0",
     "stylelint-config-standard": "^22.0.0",
-    "ts-jest": "^27.0.5",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.4.3",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
     "typescript-plugin-css-modules": "^3.4.0",
-    "web-ext": "^6.4.0",
-    "webpack": "^5.52.1",
-    "webpack-cli": "^4.8.0",
+    "web-ext": "^6.5.0",
+    "webpack": "^5.60.0",
+    "webpack-cli": "^4.9.1",
     "webpack-extension-reloader": "^1.1.4",
     "webpack-merge": "^5.8.0"
+  },
+  "resolutions": {
+    "@polkadot/keyring": "7.6.1",
+    "@polkadot/networks": "7.6.1",
+    "@polkadot/util-crypto": "7.6.1",
+    "@polkadot/util": "7.6.1",
+    "@polkadot/x-global": "7.6.1",
+    "@polkadot/x-randomvalues": "7.6.1",
+    "@polkadot/x-textdecoder": "7.6.1",
+    "@polkadot/x-textencoder": "7.6.1"
   }
 }
