--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "@kiltprotocol/types": "^0.24.0-7",
     "@kiltprotocol/utils": "^0.24.0-7",
     "@polkadot/extension-inject": "^0.40.4",
-    "@polkadot/keyring": "7.5.1",
+    "@polkadot/keyring": "^7.5.1",
     "@polkadot/types": "6.4.2",
     "@polkadot/ui-shared": "^0.86.2",
-    "@polkadot/util": "7.5.1",
-    "@polkadot/util-crypto": "7.5.1",
+    "@polkadot/util": "^7.5.1",
+    "@polkadot/util-crypto": "^7.5.1",
     "bn.js": "^4.12.0",
     "classnames": "^2.3.1",
     "ky": "^0.28.6",
@@ -127,5 +127,15 @@
     "webpack-cli": "^4.9.1",
     "webpack-extension-reloader": "^1.1.4",
     "webpack-merge": "^5.8.0"
+  },
+  "resolutions": {
+    "@polkadot/keyring": "7.6.1",
+    "@polkadot/networks": "7.6.1",
+    "@polkadot/util-crypto": "7.6.1",
+    "@polkadot/util": "7.6.1",
+    "@polkadot/x-global": "7.6.1",
+    "@polkadot/x-randomvalues": "7.6.1",
+    "@polkadot/x-textdecoder": "7.6.1",
+    "@polkadot/x-textencoder": "7.6.1"
   }
 }
