--- a/package.json
+++ b/package.json
@@ -40,18 +40,18 @@
     "open-chrome": "node scripts/chrome-launch.js"
   },
   "dependencies": {
-    "@kiltprotocol/chain-helpers": "^0.24.0-8",
-    "@kiltprotocol/core": "^0.24.0-8",
-    "@kiltprotocol/did": "^0.24.0-8",
-    "@kiltprotocol/messaging": "^0.24.0-8",
-    "@kiltprotocol/types": "^0.24.0-8",
-    "@kiltprotocol/utils": "^0.24.0-8",
+    "@kiltprotocol/chain-helpers": "^0.24.0-beta.1",
+    "@kiltprotocol/core": "^0.24.0-beta.1",
+    "@kiltprotocol/did": "^0.24.0-beta.1",
+    "@kiltprotocol/messaging": "^0.24.0-beta.1",
+    "@kiltprotocol/types": "^0.24.0-beta.1",
+    "@kiltprotocol/utils": "^0.24.0-beta.1",
     "@polkadot/extension-inject": "^0.40.4",
-    "@polkadot/keyring": "^7.6.1",
+    "@polkadot/keyring": "^7.7.1",
     "@polkadot/types": "6.4.2",
     "@polkadot/ui-shared": "^0.86.2",
-    "@polkadot/util": "^7.6.1",
-    "@polkadot/util-crypto": "^7.6.1",
+    "@polkadot/util": "^7.7.1",
+    "@polkadot/util-crypto": "^7.7.1",
     "bn.js": "^4.12.0",
     "classnames": "^2.3.1",
     "ky": "^0.28.6",
@@ -129,13 +129,13 @@
     "webpack-merge": "^5.8.0"
   },
   "resolutions": {
-    "@polkadot/keyring": "7.6.1",
-    "@polkadot/networks": "7.6.1",
-    "@polkadot/util-crypto": "7.6.1",
-    "@polkadot/util": "7.6.1",
-    "@polkadot/x-global": "7.6.1",
-    "@polkadot/x-randomvalues": "7.6.1",
-    "@polkadot/x-textdecoder": "7.6.1",
-    "@polkadot/x-textencoder": "7.6.1"
+    "@polkadot/keyring": "7.7.1",
+    "@polkadot/networks": "7.7.1",
+    "@polkadot/util-crypto": "7.7.1",
+    "@polkadot/util": "7.7.1",
+    "@polkadot/x-global": "7.7.1",
+    "@polkadot/x-randomvalues": "7.7.1",
+    "@polkadot/x-textdecoder": "7.7.1",
+    "@polkadot/x-textencoder": "7.7.1"
   }
 }
