--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "open-chrome": "node scripts/chrome-launch.js"
   },
   "dependencies": {
-    "@kiltprotocol/chain-helpers": "^0.24.0-beta.1",
-    "@kiltprotocol/core": "^0.24.0-beta.1",
-    "@kiltprotocol/did": "^0.24.0-beta.1",
-    "@kiltprotocol/messaging": "^0.24.0-beta.1",
-    "@kiltprotocol/types": "^0.24.0-beta.1",
-    "@kiltprotocol/utils": "^0.24.0-beta.1",
+    "@kiltprotocol/chain-helpers": "^0.24.0-10",
+    "@kiltprotocol/core": "^0.24.0-10",
+    "@kiltprotocol/did": "^0.24.0-10",
+    "@kiltprotocol/messaging": "^0.24.0-10",
+    "@kiltprotocol/types": "^0.24.0-10",
+    "@kiltprotocol/utils": "^0.24.0-10",
     "@polkadot/extension-inject": "^0.40.4",
     "@polkadot/keyring": "^7.7.1",
     "@polkadot/types": "6.4.2",
