--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -3,7 +3,7 @@
   "name": "__MSG_manifest_name__",
   "short_name": "__MSG_manifest_short_name__",
   "description": "__MSG_manifest_description__",
-  "version": "2021.10.27",
+  "version": "2021.11.09",
   "default_locale": "en",
   "browser_action": {
     "default_icon": {
@@ -33,7 +33,7 @@
     "clipboardWrite",
     "storage"
   ],
-  "content_security_policy": "script-src 'self' 'wasm-eval'; object-src 'self';",
+  "content_security_policy": "script-src 'self' 'wasm-eval' 'unsafe-eval'; object-src 'self';",
   "web_accessible_resources": [
     "js/injectedScript.js"
   ]
