--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
   "rules": {
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "import/no-extraneous-dependencies": 2
+    "import/no-extraneous-dependencies": 2,
+    "@typescript-eslint/no-unused-vars": 2
   },
   "settings": {
     "react": {
