--- a/package.json
+++ b/package.json
@@ -40,18 +40,18 @@
     "open-chrome": "node scripts/chrome-launch.js"
   },
   "dependencies": {
-    "@kiltprotocol/chain-helpers": "^0.24.0-18",
-    "@kiltprotocol/core": "^0.24.0-18",
-    "@kiltprotocol/did": "^0.24.0-18",
-    "@kiltprotocol/messaging": "^0.24.0-18",
-    "@kiltprotocol/types": "^0.24.0-18",
-    "@kiltprotocol/utils": "^0.24.0-18",
+    "@kiltprotocol/chain-helpers": "^0.24.0",
+    "@kiltprotocol/core": "^0.24.0",
+    "@kiltprotocol/did": "^0.24.0",
+    "@kiltprotocol/messaging": "^0.24.0",
+    "@kiltprotocol/types": "^0.24.0",
+    "@kiltprotocol/utils": "^0.24.0",
     "@polkadot/extension-inject": "^0.41.1",
-    "@polkadot/keyring": "^7.8.2",
-    "@polkadot/types": "6.4.2",
+    "@polkadot/keyring": "^7.9.2",
+    "@polkadot/types": "^6.9.2",
     "@polkadot/ui-shared": "^0.86.5",
-    "@polkadot/util": "^7.8.2",
-    "@polkadot/util-crypto": "^7.8.2",
+    "@polkadot/util": "^7.9.2",
+    "@polkadot/util-crypto": "^7.9.2",
     "bn.js": "^4.12.0",
     "classnames": "^2.3.1",
     "ky": "^0.28.7",
@@ -127,15 +127,5 @@
     "webpack-cli": "^4.9.1",
     "webpack-extension-reloader": "^1.1.4",
     "webpack-merge": "^5.8.0"
-  },
-  "resolutions": {
-    "@polkadot/keyring": "7.8.2",
-    "@polkadot/networks": "7.8.2",
-    "@polkadot/util-crypto": "7.8.2",
-    "@polkadot/util": "7.8.2",
-    "@polkadot/x-global": "7.8.2",
-    "@polkadot/x-randomvalues": "7.8.2",
-    "@polkadot/x-textdecoder": "7.8.2",
-    "@polkadot/x-textencoder": "7.8.2"
   }
 }
