--- a/package.json
+++ b/package.json
@@ -71,16 +71,16 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-typescript": "^7.16.7",
-    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-actions": "^6.4.13",
     "@storybook/addon-console": "^1.2.3",
-    "@storybook/addon-controls": "^6.3.12",
-    "@storybook/addon-links": "^6.3.12",
-    "@storybook/addon-toolbars": "^6.3.12",
-    "@storybook/addon-viewport": "^6.3.12",
-    "@storybook/addons": "^6.3.12",
-    "@storybook/builder-webpack5": "^6.3.12",
-    "@storybook/manager-webpack5": "^6.3.12",
-    "@storybook/react": "^6.3.12",
+    "@storybook/addon-controls": "^6.4.13",
+    "@storybook/addon-links": "^6.4.13",
+    "@storybook/addon-toolbars": "^6.4.13",
+    "@storybook/addon-viewport": "^6.4.13",
+    "@storybook/addons": "^6.4.13",
+    "@storybook/builder-webpack5": "^6.4.13",
+    "@storybook/manager-webpack5": "^6.4.13",
+    "@storybook/react": "^6.4.13",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -114,6 +114,7 @@
     "mini-css-extract-plugin": "^2.5.2",
     "prettier": "^2.5.1",
     "process": "^0.11.10",
+    "react-router": "^5.2.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.2.0",
