--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lint": "yarn run lint-css && yarn run lint-js",
     "lint-js": "eslint --fix --max-warnings 0 --config ./.eslintrc.json \"src/**/*.ts*\"",
     "lint-css": "stylelint \"src/**/*.css\"",
+    "css": "tcm --namedExports --pattern 'src/**/*.module.css' && eslint --fix --config ./.eslintrc.json \"src/**/*.css.d.ts\"",
     "prettify": "prettier --write \"src/**/*.ts*\"",
     "storybook": "start-storybook --port 6006",
     "open-firefox": "web-ext run --source-dir dist",
@@ -80,7 +81,6 @@
     "@storybook/builder-webpack5": "^6.3.12",
     "@storybook/manager-webpack5": "^6.3.12",
     "@storybook/react": "^6.3.12",
-    "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -121,6 +121,7 @@
     "stylelint-config-standard": "^24.0.0",
     "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
+    "typed-css-modules": "^0.7.0",
     "typescript": "^4.5.4",
     "typescript-plugin-css-modules": "^3.4.0",
     "web-ext": "^6.6.0",
