--- a/.github/workflows/stores.yaml
+++ b/.github/workflows/stores.yaml
@@ -27,6 +27,9 @@ jobs:
       - name: Rename artifact as public
         run: cd dist/web-ext-artifacts/ && mv * $(ls | sed 's/-/-public-/')
 
+      - name: Add sources
+        run: cd .. && zip -r sporran-extension/dist/web-ext-artifacts/sporran-sources.zip sporran-extension -x 'sporran-extension/dist/*' 'sporran-extension/.git/*' 'sporran-extension/node_modules/*'
+
       - name: Publish on GitHub
         uses: actions/upload-artifact@v2
         with:
