--- a/.github/workflows/stores.yaml
+++ b/.github/workflows/stores.yaml
@@ -28,7 +28,7 @@ jobs:
         run: cd dist/web-ext-artifacts/ && mv * $(ls | sed 's/-/-public-/')
 
       - name: Add sources
-        run: cd .. && zip -r sporran-extension/dist/web-ext-artifacts/sporran-sources.zip sporran-extension -x 'sporran-extension/dist/*' 'sporran-extension/.git/*' 'sporran-extension/node_modules/*'
+        run: zip -r dist/web-ext-artifacts/sporran-sources.zip $(ls --almost-all) -x 'dist/*' '.git/*' 'node_modules/*'
 
       - name: Publish on GitHub
         uses: actions/upload-artifact@v2
