--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@polkadot/util-crypto": "^8.2.2",
     "bn.js": "^4.12.0",
     "classnames": "^2.3.1",
+    "ed2curve": "^0.3.0",
     "ky": "^0.28.7",
     "lodash-es": "^4.17.21",
     "qrcode.react": "^1.0.1",
@@ -86,6 +87,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/ed2curve": "^0.2.2",
     "@types/jest": "^27.4.0",
     "@types/lodash-es": "^4.17.5",
     "@types/react": "^17.0.38",
