--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "prettify": "prettier --write \"src/**/*.ts*\"",
     "storybook": "start-storybook --port 6006 --modern",
     "open-firefox": "web-ext run --source-dir dist",
-    "open-chrome": "node scripts/chrome-launch.js"
+    "open-chrome": "node scripts/chrome-launch.js",
+    "version": "BEFORE=$(jq --raw-output .version src/static/manifest.json) && AFTER=$(date +%Y.%-m.%-d) && grep --files-with-matches --recursive $BEFORE src | xargs sed --in-place \"s/$BEFORE/$AFTER/g\" && git checkout -b version-bump && git commit --all --message=\"Version $AFTER\""
   },
   "dependencies": {
     "@kiltprotocol/chain-helpers": "^0.25.2",
