--- a/package.json
+++ b/package.json
@@ -43,19 +43,19 @@
     "version": "BEFORE=$(jq --raw-output .version src/static/manifest.json) && AFTER=$(date +%Y.%-m.%-d) && grep --files-with-matches --recursive $BEFORE src | xargs sed --in-place \"s/$BEFORE/$AFTER/g\" && git checkout -b version-bump && git commit --all --message=\"Version $AFTER\""
   },
   "dependencies": {
-    "@kiltprotocol/chain-helpers": "^0.25.5",
-    "@kiltprotocol/core": "^0.25.5",
-    "@kiltprotocol/did": "^0.25.5",
-    "@kiltprotocol/messaging": "^0.25.5",
-    "@kiltprotocol/types": "^0.25.5",
-    "@kiltprotocol/utils": "^0.25.5",
-    "@polkadot/extension-inject": "^0.42.4",
-    "@polkadot/keyring": "^8.2.2",
-    "@polkadot/types": "^6.12.1",
+    "@kiltprotocol/chain-helpers": "0.26.0",
+    "@kiltprotocol/core": "0.26.0",
+    "@kiltprotocol/did": "0.26.0",
+    "@kiltprotocol/messaging": "0.26.0",
+    "@kiltprotocol/types": "0.26.0",
+    "@kiltprotocol/utils": "0.26.0",
+    "@polkadot/extension-inject": "^0.42.7",
+    "@polkadot/keyring": "^8.4.1",
+    "@polkadot/types": "^7.10.1",
     "@polkadot/ui-shared": "^1.1.1",
-    "@polkadot/util": "^8.2.2",
-    "@polkadot/util-crypto": "^8.2.2",
-    "bn.js": "^4.12.0",
+    "@polkadot/util": "^8.4.1",
+    "@polkadot/util-crypto": "^8.4.1",
+    "bn.js": "^5.2.0",
     "classnames": "^2.3.1",
     "ky": "^0.30.0",
     "lodash-es": "^4.17.21",
