--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dev": "env VARIANT=internal NODE_ENV=development webpack --watch",
     "dev-public": "env VARIANT=public NODE_ENV=development webpack --watch",
     "identity": "node -e \"console.log(require('@polkadot/util-crypto').mnemonicGenerate())\"",
-    "test": "jest",
+    "test": "node --no-compilation-cache --expose-gc node_modules/.bin/jest --logHeapUsage",
     "lint": "yarn run lint-css && yarn run lint-js",
     "lint-js": "eslint --fix --max-warnings 0 --config ./.eslintrc.json \"src/**/*.ts*\"",
     "lint-css": "stylelint \"src/**/*.css\"",
