--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "jest": "^27.5.1",
+    "jest": "^28.0.3",
+    "jest-environment-jsdom": "^28.0.2",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.6.2",
     "process": "^0.11.10",
@@ -124,7 +125,7 @@
     "stylelint": "^14.8.1",
     "stylelint-config-css-modules": "^4.1.0",
     "stylelint-config-standard": "^25.0.0",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^28.0.0-next.3",
     "ts-loader": "^9.3.0",
     "typed-css-modules": "^0.7.2",
     "typescript": "^4.6.4",
