--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "version": "BEFORE=$(jq --raw-output .version src/static/manifest.json) && AFTER=$(date +%Y.%-m.%-d) && grep --files-with-matches --recursive $BEFORE src | xargs sed --in-place \"s/$BEFORE/$AFTER/g\" && git checkout -b version-bump && git commit --all --message=\"Version $AFTER\""
   },
   "dependencies": {
-    "@kiltprotocol/chain-helpers": "0.27.0",
-    "@kiltprotocol/core": "0.27.0",
-    "@kiltprotocol/did": "0.27.0",
-    "@kiltprotocol/messaging": "0.27.0",
-    "@kiltprotocol/types": "0.27.0",
-    "@kiltprotocol/utils": "0.27.0",
+    "@kiltprotocol/chain-helpers": "0.28.0-rc.2",
+    "@kiltprotocol/core": "0.28.0-rc.2",
+    "@kiltprotocol/did": "0.28.0-rc.2",
+    "@kiltprotocol/messaging": "0.28.0-rc.2",
+    "@kiltprotocol/types": "0.28.0-rc.2",
+    "@kiltprotocol/utils": "0.28.0-rc.2",
     "@polkadot/extension-inject": "^0.44.1",
     "@polkadot/keyring": "^8.4.1",
     "@polkadot/types": "^7.10.1",
