report sizes of built artifacts

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,6 +30,12 @@ jobs:
       - name: Build code
         run: yarn build
 
+      - name: Save stats
+        uses: actions/upload-artifact@v3
+        with:
+          name: stats
+          path: dist/stats.json
+
       - name: Package extension
         run: yarn package
 
