--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "build": "env NODE_ENV=production webpack",
-    "package": "cd dist && web-ext build --overwrite-dest",
+    "package": "cd dist && rm stats.json; web-ext build --overwrite-dest",
     "dev": "env VARIANT=internal NODE_ENV=development webpack --watch",
     "dev-public": "env VARIANT=public NODE_ENV=development webpack --watch",
     "identity": "node -e \"console.log(require('@polkadot/util-crypto').mnemonicGenerate())\"",
@@ -68,7 +68,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
     "swr": "^1.3.0",
-    "webextension-polyfill-ts": "^0.26.0"
+    "webextension-polyfill-ts": "^0.26.0",
+    "webpack-bundle-analyzer": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
