--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -41,3 +41,6 @@ jobs:
         with:
           name: sporran-extension-${{ github.sha }}
           path: dist/web-ext-artifacts/*
+
+      - name: BundleWatch
+        run: yarn run bundlewatch dist/**/*.*
