--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,6 +30,11 @@ jobs:
       - name: Build code
         run: yarn build
 
+      - name: BundleWatch
+        env:
+          BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
+        run: yarn run bundlewatch
+
       - name: Package extension
         run: yarn package
 
@@ -41,6 +46,3 @@ jobs:
         with:
           name: sporran-extension-${{ github.sha }}
           path: dist/web-ext-artifacts/*
-
-      - name: BundleWatch
-        run: yarn run bundlewatch dist/**/*.*
