--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -16,11 +16,11 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-#      - name: Run linter
-#        run: yarn lint
-#
-#      - name: Run tests
-#        run: yarn test --maxWorkers=2
+      - name: Run linter
+        run: yarn lint
+
+      - name: Run tests
+        run: yarn test --maxWorkers=2
 
       - name: Build code
         run: yarn build
@@ -29,7 +29,7 @@ jobs:
         env:
           BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
           CI_COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
-        run: yarn run bundlewatch dist/**/*.* --max-size=2MB
+        run: yarn run bundlewatch
 
       - name: Package extension
         run: yarn package
