--- a/package.json
+++ b/package.json
@@ -44,20 +44,20 @@
     "version": "BEFORE=$(jq --raw-output .version src/static/manifest.json) && AFTER=$(date +%Y.%-m.%-d) && grep --files-with-matches --recursive $BEFORE src | xargs sed --in-place \"s/$BEFORE/$AFTER/g\" && git checkout -b version-bump && git commit --all --message=\"Version $AFTER\""
   },
   "dependencies": {
-    "@kiltprotocol/chain-helpers": "0.28.2",
-    "@kiltprotocol/core": "0.28.2",
-    "@kiltprotocol/did": "0.28.2",
-    "@kiltprotocol/messaging": "0.28.2",
-    "@kiltprotocol/types": "0.28.2",
-    "@kiltprotocol/utils": "0.28.2",
-    "@polkadot/extension-inject": "0.44.2",
-    "@polkadot/keyring": "^10.1.9",
-    "@polkadot/types": "^8.12.0",
+    "@kiltprotocol/chain-helpers": "0.28.3",
+    "@kiltprotocol/core": "0.28.3",
+    "@kiltprotocol/did": "0.28.3",
+    "@kiltprotocol/messaging": "0.28.3",
+    "@kiltprotocol/types": "0.28.3",
+    "@kiltprotocol/utils": "0.28.3",
+    "@polkadot/extension-inject": "^0.44.6",
+    "@polkadot/keyring": "^10.1.11",
+    "@polkadot/types": "^9.5.2",
     "@polkadot/ui-shared": "^2.9.12",
-    "@polkadot/util": "^10.1.9",
-    "@polkadot/util-crypto": "^10.1.9",
-    "@polkadot/x-textdecoder": "^10.1.9",
-    "@polkadot/x-textencoder": "^10.1.9",
+    "@polkadot/util": "^10.1.11",
+    "@polkadot/util-crypto": "^10.1.11",
+    "@polkadot/x-textdecoder": "^10.1.11",
+    "@polkadot/x-textencoder": "^10.1.11",
     "bn.js": "^5.2.1",
     "classnames": "^2.3.2",
     "ky": "^0.31.4",
