use kiltprotocol/sdk-js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "strict": true,
     "sourceMap": true,
     "jsx": "react-jsx",
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "plugins": [
       {
@@ -18,6 +19,6 @@
     ]
   },
   "include": [
-    "./src/testing/jest.setup.ts"
+    "src",
   ]
 }
